content/assets/css/style.sass
---
---

= sans
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
  
= serif
  font-family: Georgia, Palatino, Times, 'Times New Roman', serif

= monospace
  font-family: Consolas, Monaco, monospace

/* Change base color
!base_color = #000
!base10 = lighten(!base_color, 10%)
!base20 = lighten(!base_color, 20%)
!base30 = lighten(!base_color, 30%)
!base40 = lighten(!base_color, 40%)
!normal_color = lighten(!base_color, 20%)
!passive_color = lighten(!base_color, 60%)
!attention_color = !base_color
/* Change alternate color
!alternate_color = #0070FF   
!link_base = !alternate_color
!link_hover_color = !link_base
!link_color = lighten(!link_base, 15%)


/* BEGIN Eric Meyer Reset CSS
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td
  margin: 0
  padding: 0
  border: 0
  outline: 0
  font-size: 100%
  vertical-align: baseline
  background: transparent


body
  line-height: 1


ol, ul
  list-style: none


blockquote, q
  quotes: none


blockquote
  &:before, &:after
    content: ''
    content: none


q
  &:before, &:after
    content: ''
    content: none


\:focus
  outline: 0


ins
  text-decoration: none


del
  text-decoration: line-through


table
  border-collapse: collapse
  border-spacing: 0
  
/* END Reset CSS

  
*
  +serif
  color = !normal_color


body
  font-size: 105%
  background: #fff

a
  color = !link_color
  text-decoration: none
  margin: 2px

  &:link, &:visited
    color = !link_color
  
  &:hover
    color = !link_hover_color
    text-decoration: underline

code, pre
  color = !normal_color
  +monospace
  font-size: 0.8em

h1, h2, h3, h4, .title, .logo, .medium-link
  +sans
  color = !attention_color
  font-weight: bold
  
pre
  background-color: #f8f8f8
  border-left: 3px double #ccc
  padding: 1em

ul, ol
  list-style-type: square
  li
    padding: .25em
  
ol, ul, pre
  margin-bottom: 1.5em
  
.body
  li
    margin-left: 20px
   
#main
  margin: auto
  width: 720px
  p
    margin-bottom: 1.5em
    line-height: 1.24em

#header
  overflow: auto
  margin: 3em 0 3em 0
  .logo
    float: left
    font-size: 3em
    color = !alternate_color
    a
      +sans
      color = !alternate_color
    
  #nav
    float: right
    margin-top: 24px
    text-align: right
    ul
      li
        display: inline
  .byline
    color = !passive_color

.body
  p
    line-height: 1.2em
    
  
.title
  border-bottom: 1px solid #eee
  font-size: 1.8em
  padding-bottom: 6px
  margin-bottom: .9em
  
  a
    +sans
    color = !attention_color
    margin: 0
    padding: 0
    background: white
    
#other-articles
  margin-top: 3em
  .title
    border: none
    font-size: 1em
    font-weight: none
    margin: 0

.older
  float: left
  
.newer
  float: right
  
.passive
  color = !passive_color

.meta
  font-size: 0.9em 
  ul
    li
      color = !passive_color
      display: inline

ul.medium-links
  list-style-type: none
  li
    padding-bottom: 0.5em
  a
    +sans
    color = !attention_color
    font-size: 1.2em
    font-weight: bold
    
#taglist
  margin-top: 3em
  text-align: right
  color = lighten(!passive_color, 20%)
  a
    color = lighten(!link_color, 15%)
    &:link, &:visited
      color = lighten(!link_color, 15%)

    &:hover
      color = !link_hover_color
      text-decoration: underline

.clear
  clear: both
  
.featured
  margin-bottom: 3em

#sticky
  border: 3px double #eee
  margin-bottom: 3em  
  .body
    margin: auto
    text-align: center
    p
      margin: 0
      line-height: 4em

.archives
  .year
    margin-bottom: 3em
    h2
      color = !base10
      +serif
      font-size: 2em
      margin-bottom: 1em
  .month
    h2
      color = !base20
      +serif
      font-size: 1.6em
      margin-bottom: 0.8em
      
.tags-page
  ul
    list-style-type: none

